[gd_scene load_steps=8 format=3 uid="uid://dydar1xtt5o3j"]

[ext_resource type="Script" uid="uid://d0mlh0od0g2ln" path="res://StageSelect.gd" id="1_74hoe"]
[ext_resource type="Texture2D" uid="uid://2afiwg2gmmvh" path="res://normal_white.png" id="2_pysqp"]
[ext_resource type="Texture2D" uid="uid://bnfld68dikjgr" path="res://pressed_black.png" id="3_l6rvt"]
[ext_resource type="Texture2D" uid="uid://dp0qesioua110" path="res://hover_gray.png" id="4_5lem6"]
[ext_resource type="Script" uid="uid://byvjj87gswkg5" path="res://texture_button.gd" id="5_i3tkf"]
[ext_resource type="Script" uid="uid://blvuwy8v1pcas" path="res://back.gd" id="5_pysqp"]
[ext_resource type="Script" uid="uid://8w7vv5f04hfw" path="res://texture_button_2.gd" id="6_co71f"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_74hoe")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_left = 670.0
offset_top = -268.0
offset_right = 1270.0
offset_bottom = 481.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 271
alignment = 1

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 109
text = "Stages"
horizontal_alignment = 1

[node name="TextureButton" type="TextureButton" parent="Control"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
offset_left = 661.0
offset_top = 400.0
offset_right = 861.0
offset_bottom = 488.0
texture_normal = ExtResource("2_pysqp")
texture_pressed = ExtResource("3_l6rvt")
texture_hover = ExtResource("4_5lem6")
ignore_texture_size = true
script = ExtResource("5_i3tkf")

[node name="Label" type="Label" parent="Control/TextureButton"]
layout_mode = 0
offset_left = 7.0
offset_right = 195.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 54
text = "Stage 1"

[node name="TextureButton2" type="TextureButton" parent="Control"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
offset_left = 1081.0
offset_top = 400.0
offset_right = 1281.0
offset_bottom = 481.0
mouse_filter = 1
texture_normal = ExtResource("2_pysqp")
texture_pressed = ExtResource("3_l6rvt")
texture_hover = ExtResource("4_5lem6")
ignore_texture_size = true
script = ExtResource("6_co71f")

[node name="Label" type="Label" parent="Control/TextureButton2"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 0
offset_left = 5.0
offset_right = 205.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 54
text = "Stage 2"

[node name="TextureButton3" type="TextureButton" parent="Control"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
offset_left = 463.0
offset_top = 655.0
offset_right = 663.0
offset_bottom = 733.0
texture_normal = ExtResource("2_pysqp")
texture_pressed = ExtResource("3_l6rvt")
texture_hover = ExtResource("4_5lem6")
ignore_texture_size = true

[node name="Label" type="Label" parent="Control/TextureButton3"]
layout_mode = 0
offset_left = 6.0
offset_top = -1.0
offset_right = 194.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 54
text = "Stage 3"

[node name="TextureButton4" type="TextureButton" parent="Control"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
offset_left = 871.0
offset_top = 655.0
offset_right = 871.0
offset_bottom = 733.0
texture_normal = ExtResource("2_pysqp")
texture_pressed = ExtResource("3_l6rvt")
texture_hover = ExtResource("4_5lem6")
ignore_texture_size = true

[node name="Label" type="Label" parent="Control/TextureButton4"]
layout_mode = 0
offset_left = 6.0
offset_right = 194.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 54
text = "Stage 4"

[node name="TextureButton5" type="TextureButton" parent="Control"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
offset_left = 1288.0
offset_top = 655.0
offset_right = 1488.0
offset_bottom = 733.0
texture_normal = ExtResource("2_pysqp")
texture_pressed = ExtResource("3_l6rvt")
texture_hover = ExtResource("4_5lem6")
ignore_texture_size = true

[node name="Label" type="Label" parent="Control/TextureButton5"]
layout_mode = 0
offset_left = 6.0
offset_right = 194.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 54
text = "Stage 5"

[node name="back" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 1579.0
offset_top = 925.0
offset_right = 1782.0
offset_bottom = 1004.0
mouse_filter = 1
texture_normal = ExtResource("2_pysqp")
texture_pressed = ExtResource("3_l6rvt")
texture_hover = ExtResource("4_5lem6")
ignore_texture_size = true
script = ExtResource("5_pysqp")

[node name="Label" type="Label" parent="Control/back"]
layout_mode = 0
offset_left = 36.0
offset_right = 161.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 54
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/TextureButton" to="Control" method="_on_texture_button_pressed"]
[connection signal="pressed" from="Control/TextureButton2" to="Control" method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="Control/TextureButton3" to="Control" method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="Control/TextureButton4" to="Control" method="_on_texture_button_4_pressed"]
[connection signal="pressed" from="Control/TextureButton5" to="Control" method="_on_texture_button_5_pressed"]
[connection signal="pressed" from="Control/back" to="Control" method="_on_back_pressed"]
